# trahl

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config.toml  installer.sh  prepare-dev-env.sh  prepare-test-env.sh  run.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker-build.yml  rust-clippy.yml  tests.yml
assets/: libwm.js  style.bttf.css  style.gray.css  style.neon.css  style.red.css  style.w98.css  style.w98palid.css
docker/: entrypoint.sh
docs/: main.md  rpc.md
experiments/lua/: Cargo.toml  README
experiments/lua/src/: main.rs
lualib/: integrations.lua  util.lua  utils.lua
migrations/: 20251023010656_initial.sql
src/: args.rs  config.rs  logs.rs  lua.rs  main.rs  rpc.rs  utils.rs
src/extcmd/: ffprobe.rs
src/lua/: http.rs  media.rs  regex.rs  serialization.rs  time.rs
src/master/: db.rs  file_watcher.rs  job_manager.rs  librarian.rs  lua.rs  manager.rs  mod.rs  peers.rs  rpc_server.rs  socket_server.rs  task_manager.rs  web.rs
src/master/db/: model.rs
src/master/manager/: events.rs
src/master/web/: control_panel.rs  index.rs  sse.rs  window.rs  windows.rs
src/rpc/: zmq_helper.rs
src/worker/: jobrunner.rs  mod.rs  rpc_client.rs
