[package]
name = "trahl"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_cmd = "2.0.17"
chrono = "0.4.41"
indoc = "2.0.6"
lexopt = "0.3.1"
mlua = { version = "0.11.3", features = ["lua54", "async", "vendored", "serde"] }
mlua-json = { version = "1.0.1", features = ["lua54"] }
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
signal-hook = "0.3.18"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
toml = "0.9.5"
tracing = { version = "0.1.41", features = ["async-await", "log"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["chrono", "env-filter"] }

[dev-dependencies]
tempfile = "3.21.0"
