[package]
name = "trahl"
version = "0.1.0"
edition = "2024"

[build-dependencies]
globwalk = "0.9.1"
minifier = "0.3.6"

[dependencies]
anyhow = "1.0.100"
assert_cmd = "2.0.17"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.42"
indoc = "2.0.6"
lexopt = "0.3.1"
mlua = { version = "0.11.4", features = ["lua54", "async", "vendored", "serde", "send"] }
mlua-json = { version = "1.0.1", features = ["lua54"] }
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
signal-hook = "0.3.18"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
toml = "0.9.8"
tracing = { version = "0.1.41", features = ["async-await", "log"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["chrono", "env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
zeromq = "0.4.1"
tempfile = "3.23.0"
regex = "1.12.1"
maud = { version = "0.27.0", features = ["axum"] }
axum = { version = "0.8.5", features = ["macros", "ws"] }
tower-http = { version = "0.6.6", features = ["async-compression", "compression-zstd", "fs", "full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"
async-stream = "0.3.6"
rand = "0.9.2"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3", "xxh64"] }
flate2 = "1.1.5"
